Fixed extra sidebar padding on mobile.

--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -517,13 +517,18 @@ COMMENT FORM STYLES
 SIDEBARS & ASIDES
 *********************/
 .sidebar {
-	padding-top: 4rem;
-	li{
+	li {
 		list-style: none;
 	}
 }
-.home .sidebar {
-	padding-top: 0;
+
+@include breakpoint(medium up) {
+	.sidebar {
+		padding-top: 4rem;
+	}
+	.home .sidebar {
+		padding-top: 0;
+	}
 }
 
 .widget {
